tooling/nargo_cli/tests/snapshots/execution_success/a_5_over/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
use std::ops::WrappingMul;

fn main(mut x: u32, y: u32) {
    x = x.wrapping_mul(x);
    assert(y == x);
    let c: u8 = 0_u8;
    assert(((x as u8) % 2_u8) > c);
}
