tooling/nargo_cli/tests/snapshots/execution_success/a_5_over/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v2: u32):
    v1 = allocate -> &mut u32
    store v0 at v1
    (no terminator instruction)
}
